WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298207
REGRESSION(
299308@main
) [GTK] GTK3 build broken due to missing AddEventListenerOptionsInlines.h includes
https://bugs.webkit.org/show_bug.cgi?id=298207
Summary
REGRESSION(299308@main) [GTK] GTK3 build broken due to missing AddEventListen...
Lauro Moura
Reported
2025-09-01 17:12:20 PDT
First build failure:
https://build.webkit.org/#/builders/1519/builds/6140
Error: FAILED: lib/libwebkit2gtk-4.1.so.0.20.0 : && /usr/bin/c++ -fPIC -fdiagnostics-color=always -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overread -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-subobject-linkage -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fasynchronous-unwind-tables -fdebug-types-section -fno-omit-frame-pointer -fno-strict-aliasing -fno-exceptions -fno-rtti -fcoroutines -ffunction-sections -fdata-sections -O3 -DNDEBUG -Wl,--no-undefined -L/jhbuild/install/lib -fuse-ld=lld -Wl,--gc-sections -Wl,--disable-new-dtags -shared -Wl,-soname,libwebkit2gtk-4.1.so.0 -o lib/libwebkit2gtk-4.1.so.0.20.0 @CMakeFiles/WebKit.rsp && : ld.lld: error: undefined symbol: WebCore::AddEventListenerOptions::AddEventListenerOptions(bool, std::optional<bool>, bool)
>>> referenced by UnifiedSource-54928a2b-28.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-28.cpp.o:(webkit_dom_text_add_event_listener(_WebKitDOMEventTarget*, char const*, _GClosure*, int)) >>> referenced by UnifiedSource-54928a2b-27.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-27.cpp.o:(webkit_dom_processing_instruction_add_event_listener(_WebKitDOMEventTarget*, char const*, _GClosure*, int)) >>> referenced by UnifiedSource-54928a2b-27.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-27.cpp.o:(webkit_dom_node_add_event_listener(_WebKitDOMEventTarget*, char const*, _GClosure*, int)) >>> referenced 12 more times
ld.lld: error: undefined symbol: WebCore::AddEventListenerOptions::~AddEventListenerOptions()
>>> referenced by UnifiedSource-54928a2b-28.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-28.cpp.o:(webkit_dom_text_add_event_listener(_WebKitDOMEventTarget*, char const*, _GClosure*, int)) >>> referenced by UnifiedSource-54928a2b-27.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-27.cpp.o:(webkit_dom_processing_instruction_add_event_listener(_WebKitDOMEventTarget*, char const*, _GClosure*, int)) >>> referenced by UnifiedSource-54928a2b-27.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-27.cpp.o:(webkit_dom_node_add_event_listener(_WebKitDOMEventTarget*, char const*, _GClosure*, int)) >>> referenced 12 more times
collect2: error: ld returned 1 exit status ninja: build stopped: subcommand failed. program finished with exit code 1 elapsedTime=1800.028173
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2025-09-01 17:26:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50161
EWS
Comment 2
2025-09-01 18:48:35 PDT
Committed
299414@main
(7b7c9dc5cb2f): <
https://commits.webkit.org/299414@main
> Reviewed commits have been landed. Closing PR #50161 and removing active labels.
Lauro Moura
Comment 3
2025-09-01 20:18:42 PDT
Well, it's needed in a bunch of different places. Reopening to apply a new patch.
Lauro Moura
Comment 4
2025-09-01 20:34:38 PDT
Other than the GTK InjectedBundle API files, InjectedBundle's `WKBundlePage.cpp` will also need it: ``` In file included from /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/EventTarget.h:33, from /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/Node.h:27, from /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/WebCoreOpaqueRoot.h:29, from /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/TrackBase.h:31, from /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/AudioTrack.h:32, from /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/CaptionUserPreferences.h:30, from /app/webkit/Source/WebKit/Shared/API/APICaptionUserPreferencesTestingModeToken.h:30, from /app/webkit/Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:31, from /app/webkit/WebKitBuild/GTK/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-15.cpp:1: /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/AddEventListenerOptions.h:38:12: error: inline function ‘WebCore::AddEventListenerOptions::AddEventListenerOptions(bool, std::optional<bool>, bool)’ used but never defined [-Werror] 38 | inline AddEventListenerOptions(bool capture = false, std::optional<bool> passive = std::nullopt, bool once = false); | ^~~~~~~~~~~~~~~~~~~~~~~ /app/webkit/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/AddEventListenerOptions.h:42:12: error: inline function ‘WebCore::AddEventListenerOptions::~AddEventListenerOptions()’ used but never defined [-Werror] 42 | inline ~AddEventListenerOptions(); | ^ cc1plus: all warnings being treated as errors ninja: build stopped: subcommand failed. ```
Lauro Moura
Comment 5
2025-09-01 20:39:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50165
EWS
Comment 6
2025-09-01 21:48:04 PDT
Committed
299419@main
(5a11c36849e8): <
https://commits.webkit.org/299419@main
> Reviewed commits have been landed. Closing PR #50165 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug